--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
-<body>
+<body class="body1">
     <header class="hero">
         <div class="textos-hero">
             <h1>Bienvenido a Asorelit</h1>
@@ -101,16 +101,40 @@
     <footer id="contacto">
         <div class="contenedor">
             <h2 class="titulo">Contact us</h2>
-            <form action="" class="form">
-                <input class="input"  type="text" name="" id="" placeholder="Nombre">
-                <input class="input"  type="email" name="" id="" placeholder="Email">
-                <textarea  class="input" name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
-                <input class="input"  type="submit" value="Enviar">
-            </form>
+            <body class="body2">
+                <form action="">
+                    <div class="form">
+                        <h1>Float Labels</h1>
+                        <div class="grupo" >
+                            <input type="text" name="" id="" required><span class="barra"></span>
+                            <label>Nombre</label>
+                        </div>
+                        <div class="grupo">
+                            <input type="email" name="" id="" required><span class="barra"></span>
+                            <label>Email</label>
+                        </div>
+                        <div class="grupo">
+                            <input type="number" name="" id="" required><span class="barra"></span>
+                            <label>Edad</label>
+                        </div>
+                        <div class="grupo">
+                            <textarea name="" id="" rows="3" required></textarea><span class="barra"></span>
+                            <label>Mensaje</label>
+                        </div>
+                        <button type="submit">Enviar</button>
+                        <img class="aso" src="img/imagen1.png">
+                    </div>
+                </form>
+                
+            </body>
+            
         </div>
     </footer>
 
     <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"></script>
 </body>
+
+</footer>
+
 
 </html>
