--- a/index.html
+++ b/index.html
@@ -162,9 +162,17 @@
             
         <div class="ult">
             <div class="redes">
-                <a><font color="#84E721">aquí nos encontramos</font></a>
-              <p class="a1"> Barrio Henequen manzana A lote 4 A</p> 
-        </div></div>
+                <p class="lugar"><font color="#84E721">Aquí nos encontramos</font></p>
+              <p class="telefono"> <font color="#84E721">Telefonos</font> </p>
+              <p class="correo"> <font color="#84E721">Correo de contacto</font> </p>
+                <p class="a1"> Barrio Henequen manzana A lote 4 A</p> 
+                <p class="TLF">+57 3217998656 </p>
+                <p class="TLF2">+57 3164699338 </p>
+                <p class="c1">gestion@asorelit.com</p>
+               <a class="" href="https://www.facebook.com/martinr.pereztorres"> <img  class="face" src="img/face.png" ></a>
+              <p class="red" ><font color="#84E721"> Redes sociales </font></p>
+            </div>
+    </div>
 
         </div>
     </footer>
